Вносит некоторые правки в размер картинки и отступы

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 </div>
             </button>
 
-            <div class="modal" id="modal" data-action-modal>
+            <div class="modal _active" id="modal" data-action-modal>
                 <div class="modal__overlay"></div>
                 <div class="modal__panel">
                     <div class="modal__body">
